--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+# Server
+server.port=8080
+server.servlet.context-path=/api
+# Jpa settings
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#database settings
 # Datasource
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
