--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,11 @@ server.servlet.context-path=/api
 # Jpa settings
 spring.jpa.hibernate.ddl-auto=update
 # Datasource
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB102Dialect
+spring.datasource.url=jdbc:mariadb://localhost:3306/notificationservicedb?useSSL=false
+spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 # Security
 oauth.jwt.secret=secret_key
 # ActiveMQ
