--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 <!--            <version>1.8.12</version>-->
 <!--            <scope>compile</scope>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
         <!-- AMQ -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
