--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,9 @@ oauth.jwt.secret=secret_key
 amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
-destination.createOrder=create_order_destination
+destination.createNotification=create_order_notification
+#sending email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
