--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
 destination.createNotification=create_order_notification
+destination.carRentNotification=car_rent_notification
 #sending email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
