--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,6 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #eureka
-spring.application.name="notificationservice"
+spring.application.name=notification_service
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
-eureka.instance.prefer-ip-address=true
-eureka.client.register-with-eureka=true
+eureka.instance.preferIpAddress=true
