broker and sheduler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeli
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
 destination.createNotification=create_order_notification
 destination.carRentNotification=car_rent_notification
+destination.passwordChanged=password_changed
+destination.reminderNotification=reminder_notification
 #sending email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
